// Example protocol definitions

// We use proto-buffer version 2
syntax = "proto2";

// Sensor data types from uC to Host PC
// to distinguish datas from different sensors
// After „=” it is a default value.
enum SensorDataEnum {
 SENSOR_ACCELEROMETER = 0;
 SENSOR_TEMPERATURE = 1;
 SENSOR_BATTERY = 2;
 SENSOR_ECG = 3;
}

// Array of sensor datas (max SensorData number is static
// and you can control it in the .options file, default: 10)
message SensorDataArray {
 // Generic sensor data message with timestamp
 message SensorData {
  // Required: always can be set
  // After „=” it is an ID not the default value.
  required SensorDataEnum sensorType = 1;
  required float value = 2;
  required int64 timeStamp = 3;
 }
 // Repeated: array contains 0…n pieces SensorData type message
 // default: n = 10 (static memory handling)
 repeated SensorData array = 1;
}

// Command types from Host PC to uC
// to distinguish different commands
// After „=” it is a default value.
enum CommandTypeEnum{
 SET_ENABLE_ACCELEROMETER = 0;
 SET_ENABLE_TEMP_SENSOR = 1;
 GET_TEMPERATURE_DATA = 2;
}



 
// Command messages with an always used commandType and an optional value
message Command{
 required CommandTypeEnum commandType = 1;
 optional int64 commandValue = 2;
}


message UART_msg {
required string cmd1 = 1;
required string cmd2 = 2;
}


message SimpleMessage {
    required int32 lucky_number = 1;
}

